src/objects/Relazioni__c.object
<CustomObject>
    <description>Relationships with other customers</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relazioni</relationshipLabel>
        <relationshipName>Relazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_in_Relazione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente in Relazione</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relazioni (Cliente in Relazione)</relationshipLabel>
        <relationshipName>Relazioni1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Relazione_Ghost__c</fullName>
        <label>Key Relazione Ghost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legame__c</fullName>
        <label>Legame</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legami_Parentela</valueSetName>
        </valueSet>
    </fields>
    <label>Relazione</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Relazioni Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>